fix library on iPHone

--- a/embed-library/src/app/components/widget/widget.component.scss
+++ b/embed-library/src/app/components/widget/widget.component.scss
@@ -126,6 +126,10 @@
           font-size: 8px;
           line-height: 15px;
         }
+
+        .iframeWrapper {
+          padding-top: 130%;
+        }
       }
     }
   }
